# Ditto

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.mk  makefile
.github/workflows/: main.yml
inc/: box.h  hash.h  hash_map.h  linear_map.h  linked_list.h  pair.h
inc/ATE/: assert.h  box.h  circular_buffer.h  circular_queue.h  event_loop.h  hash_map.h  linear_map.h  linked_list.h  non_null_ptr.h  polymorphic_object.h  state_machine.h  type_traits.h
include/ATE/: circular_queue.h  event_loop.h  linked_list.h
include/ditto/: arch.h  assert.h  badge.h  binary_search_tree.h  box.h  circular_queue.h  crc32c.h  enum.h  enumerate.h  error.h  event_loop.h  fixed.h  fixed_flat_map.h  fixed_vector.h  hash.h  hash_map.h  linear_map.h  linked_list.h  non_null_ptr.h  optional.h  pair.h  polymorphic_object.h  red_black_tree.h  resource_lock.h  result.h  span.h  stack_trace.h  state_machine.h  static_ptr.h  type_traits.h
src/: assert.cpp  crc32c.cpp  hash.cpp
src/arch/: aarch64.cpp  arm.cpp  x86_64.cpp
test/: assert.cpp  assert_mock.h  badge.cpp  binary_search_tree.cpp  box.cpp  circular_buffer.cpp  circular_queue.cpp  enum.cpp  enumerate.cpp  error.cpp  event_loop.cpp  fixed.cpp  fixed_flat_map.cpp  fixed_vector.cpp  hash_map.cpp  linear_map.cpp  linked_list.cpp  non_null_ptr.cpp  optional.cpp  pair.cpp  polymorphic_object.cpp  red_black_tree.cpp  resource_lock.cpp  result.cpp  span.cpp  state_machine.cpp  static_ptr.cpp
tools/: iwyu.imp  iwyu.sh  iwyu_fix.sh  run_docker.sh
